added multiple keyword functionality to search results endpoint